--- a/client/styles/helperElements.scss
+++ b/client/styles/helperElements.scss
@@ -14,6 +14,10 @@
     }
 }
 
+.inlineBlock {
+    display: inline-block;
+}
+
 .rightPadding {
     padding-right: 20px;
 }
@@ -46,6 +50,9 @@
 
     &--small {
         margin-right: .2em;
+    }
+    &--big {
+        margin-right: 1.5em;
     }
 }
 
