fix: SWP-1167 content lists

--- a/client/styles/helperElements.scss
+++ b/client/styles/helperElements.scss
@@ -64,6 +64,10 @@
     margin: -2rem;
 }
 
+.noPadding {
+    padding: 0 !important;
+}
+
 .countLabel {
     display: inline-block;
     background-color: #90bccf;
