--- a/client/views/settings/rule-preview.html
+++ b/client/views/settings/rule-preview.html
@@ -17,11 +17,11 @@
 		{{webPublisherSettings.selectedRule.expression}}
 	</p>
 	<p>Send to:</p>
-	<span class="label label--primary"
+	<span class="label label--primary rightSpace"
 		ng-repeat="dest in webPublisherSettings.selectedRule.configuration.destinations">
 		{{webPublisherSettings.getTenantNameByCode(dest.tenant)}}
 	</span>
-	<span ng-if="webPublisherSettings.selectedRule.configuration.route" class="label label--success" ng-class="{'label--hollow' : !webPublisherSettings.selectedRule.configuration.published}">
+	<span ng-if="webPublisherSettings.selectedRule.configuration.route" class="label label--success rightSpace" ng-class="{'label--hollow' : !webPublisherSettings.selectedRule.configuration.published}">
 		{{webPublisherSettings.getRouteNameByTenantAndId(webPublisherSettings.selectedRule.tenantCode , webPublisherSettings.selectedRule.configuration.route)}}
 	</span>
 	<span ng-if="webPublisherSettings.selectedRule.configuration.fbia" class="label label--primary">
