--- a/client/views/monitoring/list-item.html
+++ b/client/views/monitoring/list-item.html
@@ -1,4 +1,4 @@
-<div class="media-box media-text publisher-mediaBox" ng-click="webPublisherMonitoring.openPreview($event, i)">
+<div class="media-box media-text publisher-mediaBox" ng-class="{'fadeElement' : i.animate }" ng-click="webPublisherMonitoring.openPreview($event, i)">
     <span class="state-border"></span>
     <div class="list-field type-icon">
         <i ng-if="i.type == 'text'" class="filetype-icon-text"></i>
