fix: SWP-1198 content list filtering route

--- a/client/views/content-lists/content-list-automatic.html
+++ b/client/views/content-lists/content-list-automatic.html
@@ -20,7 +20,7 @@
         <div class="paneContent__content paneContent__content--hasFooter contentPadding">
             <form class="flat">
                 <fieldset class="label-light">
-                    <div class="item">
+                    <div class="item" ng-if="routes">
 	                    <label translate>routes</label>
                         <div sd-meta-terms
                             class="data"
