update: SWP-1189 Uploaded logo max width

--- a/client/views/manager/manage-site/theme-settings.html
+++ b/client/views/manager/manage-site/theme-settings.html
@@ -27,7 +27,7 @@
                             </div>
                         </div>
                         <div class="grid__item grid__item--col-6 bottomMargin topMargin" ng-if="webPublisher.themeSettings.logo && webPublisher.themeSettings.logo.value">
-                            <img ng-src="{{'https://' + newSite.subdomain + '.' + newSite.domainName + '/theme_logo/' + webPublisher.themeSettings.logo.value}}" />
+                            <img ng-src="{{'https://' + newSite.subdomain + '.' + newSite.domainName + '/theme_logo/' + webPublisher.themeSettings.logo.value}}" style="max-width:100%" />
                         </div>
                     </div>
                 </div>
