--- a/client/styles/wizardThemeBox.scss
+++ b/client/styles/wizardThemeBox.scss
@@ -46,6 +46,8 @@
         border: 2px dashed rgba(51, 51, 51, 0.25);
         border-radius: 3px;
         .drag-area {
+            overflow: hidden;
+
             &.dragover{
                 border: none;
                 background-color: rgba(255,255,255,.7);
