--- a/client/views/settings/rule-preview.html
+++ b/client/views/settings/rule-preview.html
@@ -1,7 +1,7 @@
 <div class="paneContent__header">
 	<h3 class="pull-left" translate>Rule preview</h3>
 	<div class="pull-right">
-		<div ng-click="webPublisherSettings.toggleCreateRule(false)" class="close-filter">
+		<div ng-click="webPublisherSettings.togglePreviewRule()" class="close-filter">
             <i class="icon-close-small"></i>
         </div>
 	</div>
