--- a/client/views/settings/rule-add-organization.html
+++ b/client/views/settings/rule-add-organization.html
@@ -12,67 +12,68 @@
 		</div>
 	</div>
 	<div class="shadowBlock">
-		<label class="form-label inlineBlock">Expression</label>
-		<div class="inlineBlock pull-right">
-			<label class="inlineBlock form-label">Catch all</label><span ng-model="newRule.catchAll" sd-switch=""></span>
-		</div>
-		<div class="form__row form__row--flex bottomMargin0"
-			ng-if="!newRule.catchAll"
-			ng-repeat="expression in newRule.expressions">
-			<div class="form__row-item">
-				<div class="sd-line-input sd-line-input--is-select bottomMargin0">
-					<select class="sd-line-input__select"
-						required
-						ng-model="expression.option"
-						ng-options="option as option.name for option in webPublisherSettings.expressionBuilder.options">
-						<option value=""></option>
-					</select>
+		<span ng-if="!newRule.id">
+			<label class="form-label inlineBlock">Expression</label>
+			<div class="inlineBlock pull-right">
+				<label class="inlineBlock form-label">Catch all</label><span ng-model="newRule.catchAll" sd-switch=""></span>
+			</div>
+			<div class="form__row form__row--flex bottomMargin0"
+				ng-if="!newRule.catchAll"
+				ng-repeat="expression in newRule.expressions">
+				<div class="form__row-item">
+					<div class="sd-line-input sd-line-input--is-select bottomMargin0">
+						<select class="sd-line-input__select"
+							required
+							ng-model="expression.option"
+							ng-options="option as option.name for option in webPublisherSettings.expressionBuilder.options">
+							<option value=""></option>
+						</select>
+					</div>
+				</div>
+				<div class="form__row-item">
+					<div class="sd-line-input sd-line-input--is-select bottomMargin0">
+						<select class="sd-line-input__select"
+							required
+							ng-disabled="!expression.option"
+							ng-model="expression.operator"
+							ng-options="operator.value as operator.name for operator in webPublisherSettings.expressionBuilder.operators[expression.option.type]">
+							<option value=""></option>
+						</select>
+					</div>
+				</div>
+				<div class="form__row-item" ng-if="expression.option.name != 'Category'">
+					<div class="sd-line-input bottomMargin0">
+						<input class="sd-line-input__input" type="text" ng-model="expression.value" ng-disabled="!expression.operator" required>
+					</div>
+				</div>
+				<div class="form__row-item" ng-if="expression.option.name == 'Category'">
+					<div class="sd-line-input sd-line-input--is-select bottomMargin0">
+						<select class="sd-line-input__select"
+							required
+							ng-disabled="!expression.operator"
+							ng-model="expression.value"
+							">
+							<option ng-repeat="category in webPublisherSettings.expressionBuilder.categories" value="{{category.name}}">{{category.name}}</option>
+						</select>
+					</div>
+				</div>
+				<div class="form__row-item form__row-item--no-grow">
+					<i class="icon-trash cursorPointer"
+					ng-click="webPublisherSettings.removeRuleExpression($index)"
+					ng-if="$index > 0"></i>
+					<i class="iconFakeSpacer"
+					ng-if="$index == 0"></i>
 				</div>
 			</div>
-			<div class="form__row-item">
-				<div class="sd-line-input sd-line-input--is-select bottomMargin0">
-					<select class="sd-line-input__select"
-						required
-						ng-disabled="!expression.option"
-						ng-model="expression.operator"
-						ng-options="operator.value as operator.name for operator in webPublisherSettings.expressionBuilder.operators[expression.option.type]">
-						<option value=""></option>
-					</select>
-				</div>
-			</div>
-			<div class="form__row-item" ng-if="expression.option.name != 'Category'">
-				<div class="sd-line-input bottomMargin0">
-					<input class="sd-line-input__input" type="text" ng-model="expression.value" ng-disabled="!expression.operator" required>
-				</div>
-			</div>
-			<div class="form__row-item" ng-if="expression.option.name == 'Category'">
-				<div class="sd-line-input sd-line-input--is-select bottomMargin0">
-					<select class="sd-line-input__select"
-						required
-						ng-disabled="!expression.operator"
-						ng-model="expression.value"
-						">
-						<option ng-repeat="category in webPublisherSettings.expressionBuilder.categories" value="{{category.name}}">{{category.name}}</option>
-					</select>
-				</div>
-			</div>
-			<div class="form__row-item form__row-item--no-grow">
-				<i class="icon-trash cursorPointer"
-				ng-click="webPublisherSettings.removeRuleExpression($index)"
-				ng-if="$index > 0"></i>
-				<i class="iconFakeSpacer"
-				ng-if="$index == 0"></i>
-			</div>
-		</div>
 
-		<div class="form__row topMargin" ng-if="!newRule.catchAll">
-			<button class="btn"
-				ng-click="webPublisherSettings.addRuleExpression()"
-				ng-disabled="!newRule.expressions[newRule.expressions.length-1].value">
-				Add expression
-			</button>
-		</div>
-
+			<div class="form__row topMargin" ng-if="!newRule.catchAll">
+				<button class="btn"
+					ng-click="webPublisherSettings.addRuleExpression()"
+					ng-disabled="!newRule.expressions[newRule.expressions.length-1].value">
+					Add expression
+				</button>
+			</div>
+		</span>
 		<label class="form-label">Destination (Tenants)</label>
 		<div class="sd-list-item sd-shadow--z1 bottomSpace" ng-repeat="destination in newRule.destinations">
 			<div class="sd-list-item__border"></div>
