--- a/client/views/settings/rule-add.html
+++ b/client/views/settings/rule-add.html
@@ -1,5 +1,6 @@
 <div class="paneContent__header">
-	<h3 class="pull-left" translate>Add Rule</h3>
+	<h3 class="pull-left" translate ng-if="!newRule.id">Add Rule</h3>
+	<h3 class="pull-left" translate ng-if="newRule.id">Edit Rule</h3>
 	<div class="pull-right">
 		<button class="btn" ng-click="webPublisherSettings.toggleCreateRule()" translate>Cancel</button>
 		<button class="btn btn--primary"
