--- a/client/views/manager/index.html
+++ b/client/views/manager/index.html
@@ -15,13 +15,27 @@
         </div>
     </div>
     <h3 class="page-nav-title"><span translate>Output Settings</span></h3>
-    <div class="subnav__button-stack--square-buttons">
-        <button class="navbtn sd-create-btn" ng-click="webPublisher.toggleSiteWizard()">
-            <i class="svg-icon-plus"></i>
-            <span class="circle"></span>
-        </button>
+    <div class="subnav__stretch-bar"></div>
+    <div class="dropdown navbtn strict" title="{{ :: 'Create' | translate }}" dropdown>
+        <button class="dropdown__toggle sd-create-btn" dropdown__toggle></button>
+
+        <ul class="dropdown__menu dropdown__menu--scrollable pull-right">
+            <li><div class="dropdown__menu-label" translate>Create new site</div></li>
+            <li>
+                <button ng-click="webPublisher.toggleSiteWizard()">
+                    <i class="icon-plus-sign icon--blue"></i>{{:: 'Superdesk Publisher'| translate}}
+                </button>
+            </li>
+            <li>
+                <button ng-click="webPublisher.toggleSiteWizard('Wordpress')">
+                    <i class="icon-plus-sign icon--blue"></i>{{:: 'Wordpress'| translate}}
+                </button>
+            </li>
+        </ul>
     </div>
 </div>
+
+
 
 <section class="main-section master-desk-view">
     <div class="main-desk-container">
@@ -38,7 +52,7 @@
         <h3 class="panel-info__heading">No tenants so far.</h3>
         <p class="panel-info__description">To create a site click on the plus button to top right.</p>
     </div>
-    <div sd-site-wizard data-active="webPublisher.siteWizardActive" data-manager-controller="webPublisher"></div>
+    <div sd-site-wizard data-active="webPublisher.siteWizardActive" data-output-channel-type="webPublisher.siteWizardOutputChannelType" data-manager-controller="webPublisher"></div>
     <div ng-include="'info-carousel.html'"></div>
     <div ng-include="'manage-site.html'" ng-if="webPublisher.openSiteModal"></div>
 </section>
