--- a/client/views/manager/manage-site/manage-site.html
+++ b/client/views/manager/manage-site/manage-site.html
@@ -1,6 +1,6 @@
 <div sd-modal data-model="true" data-full="true" class="modal--fullscreen publisherManager" ng-init="webPublisher.activeTab = 'general'">
     <div class="modal__header">
-        <h3 class="modal__heading pull-left"><span translate>Manage:</span> <b>{{newSite.name}}</b></h3>
+        <h3 class="modal__heading pull-left"><span translate>Manage:</span> <b>{{webPublisher.selectedSite.name}}</b></h3>
         <div class="pull-right">
             <a class="btn btn--success" target="_blank"
                 ng-href="{{webPublisher.selectedSite.subdomain ? 'http://' + webPublisher.selectedSite.subdomain + '.' + webPublisher.selectedSite.domainName: 'http://' + webPublisher.selectedSite.domainName}}">
@@ -43,22 +43,27 @@
                             ng-disabled="webPublisher.themeSettingsForm.$dirty"
                             translate>General</button>
                     </li>
-                    <li ng-class="{active: webPublisher.activeTab === 'routes'}">
+                    <li ng-class="{active: webPublisher.activeTab === 'routes'}"
+                        ng-if="!webPublisher.selectedSite.outputChannel">
                         <button ng-click="webPublisher.changeTab('routes')"
                             ng-disabled="!webPublisher.selectedSite.code || webPublisher.siteForm.$dirty || webPublisher.themeSettingsForm.$dirty"
                             translate>Routes</button>
                     </li>
-                    <li ng-class="{active: webPublisher.activeTab === 'navigation' || webPublisher.activeTab === 'navigation-menu'}">
+                    <li ng-class="{active: webPublisher.activeTab === 'navigation' || webPublisher.activeTab === 'navigation-menu'}"
+                        ng-if="!webPublisher.selectedSite.outputChannel">
                         <button ng-click="webPublisher.changeTab('navigation')"
                             ng-disabled="!webPublisher.selectedSite.code || webPublisher.siteForm.$dirty || webPublisher.themeSettingsForm.$dirty"
                             translate>Navigation</button>
                     </li>
-                    <li ng-class="{active: webPublisher.activeTab === 'theme-manager'}">
+                    <li ng-class="{active: webPublisher.activeTab === 'theme-manager'}"
+                        ng-if="!webPublisher.selectedSite.outputChannel">
                         <button ng-click="webPublisher.changeTab('theme-manager')"
                             ng-disabled="!webPublisher.selectedSite.code || webPublisher.siteForm.$dirty || webPublisher.themeSettingsForm.$dirty"
                             translate>Theme</button>
                     </li>
-                    <li ng-class="{active: webPublisher.activeTab === 'theme-settings'}" ng-show="webPublisher.themeSettings.settings.length">
+                    <li ng-class="{active: webPublisher.activeTab === 'theme-settings'}"
+                        ng-show="webPublisher.themeSettings.settings.length"
+                        ng-if="!webPublisher.selectedSite.outputChannel">
                         <button ng-click="webPublisher.changeTab('theme-settings')"
                             ng-disabled="!webPublisher.selectedSite.code || webPublisher.siteForm.$dirty"
                             translate>Theme Customization</button>
@@ -66,29 +71,9 @@
                 </ul>
             </div>
             <div class="sidebarLayout__content" ng-switch="webPublisher.activeTab">
-                <div ng-if="webPublisher.activeTab === 'general'" class="modal__header modal__header--padding-20 ng-scope">
-                    <h3 class="page-nav-title--text-light" translate="">General</h3>
+                <div ng-switch-when="general">
+                    <div ng-include="'general.html'"></div>
                 </div>
-                <form name="webPublisher.siteForm">
-                    <fieldset ng-switch-when="general" class="paneContent__main">
-                        <div class="field">
-                            <label for="name" translate>Web Site Name:</label>
-                            <input type="text" name="name" ng-model="newSite.name" class="line-input" required/>
-                        </div>
-                        <div class="field">
-                            <label for="domainName" translate>Domain Name:</label>
-                            <input type="text" ng-trim="false" ng-change="newSite.domainName = newSite.domainName.split(' ').join('')" name="domainName" ng-model="newSite.domainName" class="line-input" required/>
-                        </div>
-                        <div class="field">
-                            <label for="subdomain" translate>Subdomain Name:</label>
-                            <input type="text" ng-trim="false" ng-change="newSite.subdomain = newSite.subdomain.split(' ').join('')" name="subdomain" ng-model="newSite.subdomain" class="line-input"/>
-                        </div>
-                        <div class="field">
-                            <label>Enable AMP</label><span ng-model="newSite.ampEnabled" sd-switch=""></span>
-                        </div>
-
-                    </fieldset>
-                </form>
                 <div ng-switch-when="routes">
                     <div ng-include="'routes.html'"></div>
                 </div>
