--- a/client/views/manager/index.html
+++ b/client/views/manager/index.html
@@ -37,22 +37,24 @@
 
 
 
-<section class="main-section master-desk-view">
-    <div class="main-desk-container">
-        <div class="desk-container" ng-repeat="site in sites | orderBy: 'name'">
-            <div class="desk" ng-include="'tenant.html'"></div>
+<section class="paneLayout paneLayout--twoHeadersMargin">
+        <a class="btn btn--sd-green btn--icon-only-circle btn--large sd-shadow--z4 absPosition absPosition--topRight" style="z-index:1" ng-click="webPublisher.toggleInfoCarousel()"><i class="icon-info-large"></i></a>
+    <div class="paneLayout__content contentPadding">
+        <div class="flex-grid flex-grid--boxed flex-grid--wrap-items flex-grid--small-1  flex-grid--medium-2 flex-grid--large-4">
+            <div class="flex-grid__item flexColumn"
+                ng-repeat="site in sites | orderBy: 'name'"
+                ng-include="'tenant.html'">
+            </div>
         </div>
-        <div style="flex: 0 0 60px"></div>
-    </div>
-    <a class="btn btn--sd-green btn--icon-only-circle btn--large sd-shadow--z4 absPosition absPosition--topRight" ng-click="webPublisher.toggleInfoCarousel()"><i class="icon-info-large"></i></a>
-    <div class="panel-info" ng-if="!sites.length && !loading">
-        <div class="panel-info__icon">
-            <i class="big-icon--add-to-list"></i>
+        <div class="panel-info" ng-if="!sites.length && !loading">
+            <div class="panel-info__icon">
+                <i class="big-icon--add-to-list"></i>
+            </div>
+            <h3 class="panel-info__heading">No tenants so far.</h3>
+            <p class="panel-info__description">To create a site click on the plus button to top right.</p>
         </div>
-        <h3 class="panel-info__heading">No tenants so far.</h3>
-        <p class="panel-info__description">To create a site click on the plus button to top right.</p>
+        <div sd-site-wizard data-active="webPublisher.siteWizardActive" data-output-channel-type="webPublisher.siteWizardOutputChannelType" data-manager-controller="webPublisher"></div>
+        <div ng-include="'info-carousel.html'"></div>
+        <div ng-include="'manage-site.html'" ng-if="webPublisher.openSiteModal"></div>
     </div>
-    <div sd-site-wizard data-active="webPublisher.siteWizardActive" data-output-channel-type="webPublisher.siteWizardOutputChannelType" data-manager-controller="webPublisher"></div>
-    <div ng-include="'info-carousel.html'"></div>
-    <div ng-include="'manage-site.html'" ng-if="webPublisher.openSiteModal"></div>
 </section>
