--- a/client/views/manager/tenant.html
+++ b/client/views/manager/tenant.html
@@ -1,38 +1,47 @@
-<div class="desk__header">
-    <div class="desk__name">
-        {{ site.name }}
-    </div>
-    <div class="desk__action dropdown dropdown--align-right" dropdown>
-        <button class="dropdown__toggle" dropdown__toggle><i class="icon-dots"></i></button>
-        <ul class="dropdown__menu">
-            <li><button ng-click="webPublisher.activateLiveSite(site)"><i class="icon-external"></i> {{ 'Livesite editor' | translate }}</button></li>
-            <li>
-                <a
-                ng-href="{{site.subdomain ? 'http://' + site.subdomain + '.' + site.domainName: 'http://' + site.domainName}}"
-                target="_blank"><i class="icon-globe"></i> {{ 'Open website' | translate }}
-                </a>
-            </li>
-            <li><button ng-click="webPublisher.editSite(site)"><i class="icon-pencil"></i> {{ 'Manage website' | translate }}</button></li>
-            <li class="dropdown__menu-divider"></li>
-            <li><button ng-click="webPublisher.deleteSite(site.code)"><i class="icon-trash"></i> {{ 'Delete website' | translate }}</button></li>
-
-
-
-        </ul>
-    </div>
+<div class="text--uppercase text--bolder sp-borderBottom--big bottomMargin--10">
+    {{ site.name }}
 </div>
-<div class="desk__content">
-    <div class="sd-card">
-        <div class="sd-card__content">
-            <div class="flex-grid flex-grid--small-2">
-                <div class="flex-grid__item numberLabel">
-                    <span class="numberLabel__number">{{site.articlesCount}}</span>
-                    <span class="numberLabel__label">published<br />items</span>
-                </div>
-                <div ng-if="!site.outputChannel" class="flex-grid__item"><i class="sp-logo-sd pull-right" sd-tooltip="Superdesk Publisher" flow="left"></i></div>
-                <div ng-if="site.outputChannel" class="flex-grid__item"><i class="sp-logo-wordpress pull-right" sd-tooltip="Wordpress" flow="left"></i></div>
+<div class="sd-card flex1">
+    <div class="contentPadding--small sp-borderBottom">
+        <div class="pull-left">
+            <i ng-if="!site.outputChannel" class="sp-logo-sd" sd-tooltip="Superdesk Publisher" flow="right"></i>
+            <i ng-if="site.outputChannel" class="sp-logo-wordpress" sd-tooltip="Wordpress" flow="right"></i>
+            <div class="numberLabel">
+                <span class="numberLabel__number">{{site.articlesCount}}</span>
+                <span class="numberLabel__label">published<br />items</span>
             </div>
-            <div sd-site-routes data-site="site"></div>
+        </div>
+        <div class="pull-right">
+            <a class="btn btn--hollow"
+                ng-href="{{site.outputChannel ? site.outputChannel.config.url : 'http://' + site.subdomain + '.' + site.domainName}}"
+                target="_blank"><i class="icon-globe"></i>{{ 'Open' | translate }}</a>
+        </div>
+
+    </div>
+    <div ng-if="!site.outputChannel" class="contentPadding--small sp-borderBottom grid">
+        <div class="grid__item grid__item--col-6">
+            <img ng-if="!site.theme.screenshots[0] || !site.theme.screenshots[0].url"
+                src="../../directives/themeManager/no-theme-preview.png"
+                class="maxWidth100 sp-border"/>
+            <img ng-if="site.theme.screenshots[0] && site.theme.screenshots[0].url"
+                ng-src="{{site.theme.screenshots[0].url}}"
+                class="maxWidth100 sp-border"/>
+        </div>
+        <div class="grid__item grid__item--col-6">
+            <h6 class="text--uppercase text--lighter text--bold">{{ 'Active theme' | translate }}</h6>
+            <span class="text--bolder">{{site.theme.title ? site.theme.title : 'No Theme' }}</span>
+            <p ng-if="site.ampEnabled" class="text--small text--green">AMP</p>
+            <p ng-if="!site.ampEnabled" class="text--small text--light text--strikethrough">AMP</p>
+
         </div>
     </div>
+    <ul class="flexColumn flex1">
+        <li class="sp-borderBottom contentPadding--small" ng-if="!site.outputChannel"><button ng-click="webPublisher.activateLiveSite(site)"><i class="icon-external rightSpace"></i> {{ 'Livesite editor' | translate }}</button></li>
+
+        <li class="contentPadding--small"><button ng-click="webPublisher.editSite(site)"><i class="icon-pencil rightSpace"></i> {{ 'Manage website' | translate }}</button></li>
+        <li class="flex1"></li>
+        <li class="contentPadding--small sp-borderTop--dark"><button ng-click="webPublisher.deleteSite(site.code)"><i class="icon-trash rightSpace"></i> {{ 'Delete website' | translate }}</button></li>
+
+    </ul>
 </div>
+
