feature: paywall secured rules and routes

--- a/client/views/manager/manage-site/routes.html
+++ b/client/views/manager/manage-site/routes.html
@@ -68,6 +68,9 @@
                         </select>
                     </div>
                     <div class="item">
+                        <span ng-model="newRoute.paywallSecured" sd-switch=""></span><label>Paywall secured</label>
+                    </div>
+                    <div class="item">
 	                    <label for="routeTemplate" translate>template name</label>
 	                    <input type="text" class="line-input" id="routeTemplate" ng-model="newRoute.templateName">
                     </div>
