--- a/client/views/settings/rule-add-tenant.html
+++ b/client/views/settings/rule-add-tenant.html
@@ -100,5 +100,8 @@
             <sd-check ng-model="newRule.action.published">Auto Publish</sd-check>
             <sd-check ng-model="newRule.action.fbia">Publish on Facebook</sd-check>
         </div>
+        <div class="form__row">
+            <sd-check ng-model="newRule.action.paywallSecured">Paywall Secured</sd-check>
+        </div>
     </div>
 </form>
