--- a/client/views/settings/rule-item.html
+++ b/client/views/settings/rule-item.html
@@ -24,6 +24,7 @@
             <span ng-if="rule.configuration.fbia" class="label label--primary">
                 Facebook
             </span>
+            <i ng-if="rule.configuration.paywallSecured" class="icon-lock icon--blue"></i>
         </div>
     </div>
     <div class="sd-list-item__action-menu">
